[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ResolutionManager/GUI.theme" type="Theme" id=1]
[ext_resource path="res://addons/ResolutionManager/BaseResWindow.gd" type="Script" id=2]

[node name="BaseResWindow" type="WindowDialog"]
margin_left = 11.0
margin_top = 35.0
margin_right = 511.0
margin_bottom = 239.0
theme = ExtResource( 1 )
window_title = "Set Base Resolution"
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 4.0
margin_right = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 200.0

[node name="CurrentRes" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Current resolution: "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 460.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_right = 440.0
margin_bottom = 123.0
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 440.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 17

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 53.0
margin_bottom = 22.0
text = "Custom:"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 440.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Choose pre-defined resolution"
clip_text = true
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 440.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 31

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 42.0
margin_bottom = 22.0
text = "Width:"

[node name="Width" type="LineEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 73.0
margin_right = 440.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
clear_button_enabled = true
placeholder_text = "Enter Width"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 440.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 26

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 8.0
margin_right = 46.0
margin_bottom = 22.0
text = "Height:"

[node name="Height" type="LineEdit" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 72.0
margin_right = 440.0
margin_bottom = 30.0
size_flags_horizontal = 3
align = 1
clear_button_enabled = true
placeholder_text = "Enter Height"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 165.0
margin_right = 460.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 35 )
size_flags_vertical = 0
custom_constants/separation = 50
alignment = 1

[node name="Ok" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 205.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_vertical = 0
text = "Ok"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 255.0
margin_right = 330.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_vertical = 0
text = "Cancel"
[connection signal="about_to_show" from="." to="." method="_on_BaseResWindow_about_to_show"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
